<resources>
    <string name="app_name">Share to Reading.am</string>
    <string name="yep">Yep</string>
    <string name="nope">Nope</string>
    <string name="share_to_reading">Share to Reading</string>
    <string name="link_was_not_posted_to_reading">Link was not posted to Reading.am</string>
    <string name="set_up">Set up</string>
    <string name="you_need_to_add_your_reading_email_first">You need to add your Reading email first.</string>
    <string name="your_reading_am_post_via_email_address">Your <b>Post Via Email</b> address:</string>
    <string name="click_here_to_find_your_post_via_email_address">Click here to find your <b>Post Via Email</b> address from Reading.am</string>
    <string name="want_the_option_to_say_yep_nope_on_a_link">Want the option to say <i>yep</i> / <i>nope</i> before sending a link?</string>
    <string name="yep_let_me_say_yep_or_nope_before_sending_the_link">Yep, let me say <i>yep</i> or <i>nope</i> before sending the link</string>
    <string name="nope_just_send_the_link_right_away">Nope, just send the link right away</string>
    <string name="save">Save</string>
    <string name="save_and_return_to_link">Save and return to link</string>
    <string name="hint_mailman_reading_am">...@mailman.reading.am</string>
</resources>
