<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="xyz.egie.sharetoreadingam.ShareOverlayActivity"
    android:gravity="bottom|end"
    android:id="@+id/activity_share"
    android:padding="16dp"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom|end"
        android:gravity="center"
        android:background="@color/colorPrimary"
        android:paddingBottom="4dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="4dp"
        android:layout_marginBottom="64dp">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/error_text"
            android:background="@color/colorPrimary"
            android:visibility="gone"
            android:text="@string/you_need_to_add_your_reading_email_first"/>

        <TextView
            style="@style/OpinionButton"
            android:id="@+id/yep_button"
            android:text="@string/yep"/>

        <TextView
            style="@style/OpinionButton"
            android:id="@+id/nope_button"
            android:text="@string/nope"/>

        <TextView
            style="@style/SendButton"
            android:id="@+id/send_button"
            android:text="@string/share_to_reading" />

    </LinearLayout>

</FrameLayout>
