<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="xyz.egie.sharetoreadingam.SettingsActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/email_prompt"
            android:layout_marginBottom="8dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="18sp"
            android:text="@string/your_reading_am_post_via_email_address" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_prompt"
            android:id="@+id/email_hint"
            android:textColor="@color/black_to_white"
            android:background="@drawable/accent_to_black"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:padding="12dp"
            android:layout_marginBottom="8dp"
            android:drawableRight="@drawable/ic_navigate_next_black_24dp"
            android:drawableEnd="@drawable/ic_navigate_next_black_24dp"
            android:text="@string/click_here_to_find_your_post_via_email_address"/>

        <TextView
            android:text="@string/save"
            android:id="@+id/save_button"
            android:layout_below="@id/email_hint"
            android:layout_alignEnd="@id/email_hint"
            android:layout_alignRight="@id/email_hint"
            android:drawableRight="@null"
            android:drawableEnd="@null"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            style="@style/SendButton"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_mailman_reading_am"
            android:id="@+id/email_input"
            android:layout_below="@id/email_hint"
            android:layout_toLeftOf="@id/save_button"
            android:layout_toStartOf="@id/save_button"
            android:layout_alignBaseline="@id/save_button"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:inputType="textEmailAddress"
            android:imeOptions="actionDone"
            android:lines="1"
            android:layout_alignStart="@id/email_prompt"
            android:layout_alignLeft="@id/email_prompt"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/opinion_prompt"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="8dp"
            android:layout_below="@id/email_input"
            android:gravity="end"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:textSize="18sp"
            android:text="@string/want_the_option_to_say_yep_nope_on_a_link" />

        <TextView
            style="@style/OpinionButton"
            android:gravity="start"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/yellow_outline_white_on_click"
            android:text="@string/yep_let_me_say_yep_or_nope_before_sending_the_link"
            android:id="@+id/yep_button_opinion_option"
            android:layout_marginBottom="8dp"
            android:layout_below="@id/opinion_prompt"/>

        <TextView
            style="@style/OpinionButton"
            android:gravity="start"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/yellow_outline_white_on_click"
            android:text="@string/nope_just_send_the_link_right_away"
            android:id="@+id/nope_button_opinion_option"
            android:layout_below="@id/yep_button_opinion_option"/>


    </RelativeLayout>

</ScrollView>